Add functionality to create decks.                                                                                                                   Change default non final fields in R classes in gradle.properties

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,15 @@
         tools:layout_editor_absoluteY="34dp">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonCreateDeck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="handleClick"
-            android:text="Button" />
+            android:text="Create a Deck" />
+
+        <Button
+            android:id="@+id/buttonAddFlashcard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add a flashcard" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
