--- a/app/src/main/res/layout/activity_choose_deck.xml
+++ b/app/src/main/res/layout/activity_choose_deck.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/buttonChooseDeck"
+            android:id="@+id/buttonStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
