--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         tools:layout_editor_absoluteY="34dp">
 
         <Button
+            android:id="@+id/buttonStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start Learning" />
+
+        <Button
             android:id="@+id/buttonCreateDeck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
